...
        titleSpacing: 69.0,
        toolbarHeight: 70,
      ),
      body: Column(
        children: [
          Expanded(
            key: Key('addGiftButton'),
            child: _buildListItem(
              context: context,
              title: 'Add Gift',
              imageUrl: 'https://i.imgur.com/lF3pHSb.jpg', // Corrected direct link
              onTap: () {
                Navigator.pushNamed(context, '/AddGift');
              },
            ),
          ),
          Expanded(
            key: Key('addEventButton'),
            child: _buildListItem(
              context: context,
              title: 'Add Event',
              imageUrl: 'https://i.imgur.com/jLGe4Yi.jpg', // Corrected direct link
              onTap: () {
                Navigator.pushNamed(context, '/AddEvent');
...
